--- a/src/components/Experiences/ProjetModal.css
+++ b/src/components/Experiences/ProjetModal.css
@@ -1,5 +1,18 @@
 /* Styles pour la modal */
-.project-modal {
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 1); /* Fond semi-transparent noir */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(20px); /* Flou du fond */
+    z-index: 999; /* Assurez-vous que le fond est au-dessus de tous les autres éléments */
+  }
+  .project-modal {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,30 +34,38 @@
     max-width: 90%; /* Ajustez la largeur de la modal */
   }
   
+  /* Styles pour le titre de la modal */
   .modal-content h3 {
     font-size: 1.5rem;
     margin-bottom: 10px;
+    color: #ff6b6b;
   }
+  
   
   .modal-content p {
     font-size: 1rem;
+  
+    text-align: center;
    
   }
-  
-/* Dans votre fichier CSS pour ProjectModal.css */
+  .modal-content a {
+    text-decoration: none;
+    color: #ff4949;
+  }
+
 
 /* Styles pour le bouton de fermeture */
 .modal-content button {
-    background-color: #ff6b6b; /* Couleur de fond rouge */
-    color: #fff; /* Couleur du texte blanc */
-    border: none; /* Supprimer la bordure */
-    padding: 10px 20px; /* Rembourrage pour le bouton */
-    cursor: pointer; /* Curseur de type main pour indiquer un lien cliquable */
+    background-color: #ff6b6b; 
+    color: #fff; 
+    border: none; 
+    padding: 10px 20px; 
+    cursor: pointer;
   }
   
   /* Styles pour le bouton de fermeture au survol */
   .modal-content button:hover {
-    background-color: #ff4949; /* Couleur de fond rouge légèrement plus foncée */
+    background-color: #ff4949; 
   }
   
   /* Styles pour le bouton "Fermer" */
@@ -63,7 +84,18 @@
   .project-modal button:hover {
     background-color: #ff6b6b;
   }
-  
+  .tech-icon {
+    width: 24px; /* Ajustez la taille en fonction de vos besoins */
+    height: 24px;
+    
+  }
+  .tech-icons-container {
+    display: flex;
+    justify-content: center; /* Centrage horizontal */
+    align-items: center; /* Centrage vertical */
+    list-style: none;
+  }
+    
   @media (max-width: 768px) {
     .modal-content {
       padding: 10px;
@@ -80,6 +112,7 @@
   
     .modal-content button {
       font-size: 0.9rem;
+      max-width: 95%;
     }
     
   }
