--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -49,7 +49,7 @@
   }
   
   button {
-    background-color: #f44336;
+    background-color: black;
     color: #fff;
     border: none;
     border-radius: 4px;
