--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -4,12 +4,12 @@
   }
   
   .contact-form {
-    background-color: #ff6b6b;
-    border: 1px solid #ddd;
+    background-color: white;
+    border: 3px solid #ff4f4f;
     border-radius: 8px;
     padding: 30px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    max-width: 80%;
+    max-width: 30%;
     margin: 0 auto;
   }
   
@@ -42,9 +42,9 @@
   
   input,
   textarea {
-    width: 100%;
+    width: 90%;
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #ff4f4f;
     border-radius: 4px;
   }
   
