--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -18,6 +18,7 @@
     align-items: center;
     margin-top: 100px;
     margin-bottom: 50px;
+   
   }
  
 @media screen and (max-width: 768px) {
@@ -28,6 +29,10 @@
       box-sizing: border-box;
     }
   
-   
+    .contact-button-container {
+      margin-left: 20px;
+      margin-right: 20px;
+
+    }
 }
   
