--- a/src/components/Experiences/Experiences.css
+++ b/src/components/Experiences/Experiences.css
@@ -80,4 +80,8 @@
     grid-template-columns: repeat(1, 1fr); 
     margin: 0 20px;
   }
+  .sc2a-card img {
+    width: 30%;
+    height: 60%;
+  }
 }
