--- a/src/components/Experiences/ProjetModal.css
+++ b/src/components/Experiences/ProjetModal.css
@@ -1,11 +1,11 @@
-/* Styles pour la modal */
+
 .modal-background {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 1); /* Fond semi-transparent noir */
+    background-color: rgba(0, 0, 0, 1); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,10 +31,10 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     padding: 20px;
     text-align: center;
-    max-width: 90%; /* Ajustez la largeur de la modal */
+    max-width: 90%; 
   }
   
-  /* Styles pour le titre de la modal */
+ 
   .modal-content h3 {
     font-size: 1.5rem;
     margin-bottom: 10px;
@@ -54,7 +54,7 @@
   }
 
 
-/* Styles pour le bouton de fermeture */
+
 .modal-content button {
     background-color: #ff6b6b; 
     color: #fff; 
@@ -63,12 +63,11 @@
     cursor: pointer;
   }
   
-  /* Styles pour le bouton de fermeture au survol */
+ 
   .modal-content button:hover {
     background-color: #ff4949; 
   }
   
-  /* Styles pour le bouton "Fermer" */
   .project-modal button {
     background: none;
     position: absolute;
@@ -85,21 +84,21 @@
     background-color: #ff6b6b;
   }
   .tech-icon {
-    width: 24px; /* Ajustez la taille en fonction de vos besoins */
+    width: 24px; 
     height: 24px;
     
   }
   .tech-icons-container {
     display: flex;
-    justify-content: center; /* Centrage horizontal */
-    align-items: center; /* Centrage vertical */
+    justify-content: center;
+    align-items: center; 
     list-style: none;
   }
     
   @media (max-width: 768px) {
     .modal-content {
       padding: 10px;
-      max-width: 95%; /* Ajustez la largeur de la modal pour mobile */
+      max-width: 95%; 
     }
   
     .modal-content h3 {
